compiler/testData/diagnostics/tests/recovery/namelessToplevelDeclarations.kt
// !DIAGNOSTICS: -REDECLARATION

package<!SYNTAX!><!>

<!FUNCTION_DECLARATION_WITH_NO_NAME, CONFLICTING_OVERLOADS!>fun ()<!> {

}

val<!SYNTAX!><!> : Int = 1


class<!SYNTAX!><!> {

}

interface<!SYNTAX!><!> {

}

object<!SYNTAX!><!> {

}

enum class<!SYNTAX!><!> {}

annotation class<!SYNTAX!><!> {}
